tic-tac-toe-wholetst/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: $request_uri
    kubernetes.io/ingress.class: nginx 
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: tic-tac-toe-wholetst
  namespace: wholetst
spec:
  rules:
  - host: wholetst.solgames.fun
    http:
      paths:
      - backend:
          service:
            name: tic-tac-toe-wholetst
            port:
              number: 3000
        path: /
        pathType: ImplementationSpecific
